// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard Component Snapshots should match snapshot with edit and delete handlers 1`] = `
<div
  class="min-h-screen bg-slate-950 p-4 md:p-8"
>
  <div
    class="max-w-6xl mx-auto space-y-8"
  >
    <header
      class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
    >
      <div>
        <h1
          class="text-3xl font-bold text-white"
        >
          Minhas Mesas
        </h1>
        <p
          class="text-slate-400"
        >
          Gerencie suas campanhas de RPG.
        </p>
      </div>
      <div
        class="flex w-full flex-col gap-2 sm:w-auto sm:flex-row"
      >
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-purple-600 text-white hover:bg-purple-700 shadow-sm h-10 px-4 py-2 w-full sm:w-auto"
        >
          + Nova Mesa
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-slate-800 text-slate-100 hover:bg-slate-700 border border-slate-700 h-10 px-4 py-2 w-full sm:w-auto"
        >
          Entrar por ID
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 border border-slate-600 bg-transparent hover:bg-slate-800 text-slate-200 h-10 px-4 py-2 w-full sm:w-auto"
        >
          Sair
        </button>
      </div>
    </header>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
    >
      <div
        class="border rounded-xl p-6 transition-colors cursor-pointer flex flex-col h-full relative overflow-hidden bg-slate-900 border-slate-800 hover:border-purple-500"
      >
        <div
          class="flex justify-between items-start mb-2 mt-1"
        >
          <span
            class="text-xs font-mono uppercase text-purple-400 bg-purple-950 px-2 py-1 rounded"
          >
            Fantasy
          </span>
          <div
            class="flex gap-1"
          >
            <button
              class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 border border-slate-600 bg-transparent hover:bg-slate-800 text-slate-200 h-8 px-3 text-xs"
            >
              Editar
            </button>
            <button
              class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-red-600 text-white hover:bg-red-700 h-8 px-3 text-xs"
            >
              Excluir
            </button>
          </div>
          <span
            class="w-2 h-2 rounded-full bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.6)]"
          />
        </div>
        <div
          class="flex gap-4 items-start mb-4"
        >
          <div>
            <h3
              class="text-xl font-bold text-white leading-tight"
            >
              The Lost Kingdom
            </h3>
            <p
              class="text-xs text-slate-500 mt-1"
            >
              Aragorn
            </p>
          </div>
        </div>
        <p
          class="text-slate-400 text-sm mb-4 line-clamp-3 flex-1"
        >
          Ancient history
        </p>
        <div
          class="mt-auto pt-4 border-t border-slate-800 flex justify-between items-center text-sm text-slate-500"
        >
          <span
            class="truncate max-w-[60%]"
          >
            Epic
          </span>
          <span
            class="text-purple-400 group-hover:translate-x-1 transition-transform"
          >
            Jogar
             →
          </span>
        </div>
      </div>
      <div
        class="border rounded-xl p-6 transition-colors cursor-pointer flex flex-col h-full relative overflow-hidden bg-slate-900 border-slate-800 hover:border-purple-500"
      >
        <div
          class="flex justify-between items-start mb-2 mt-1"
        >
          <span
            class="text-xs font-mono uppercase text-purple-400 bg-purple-950 px-2 py-1 rounded"
          >
            Cyberpunk
          </span>
          <div
            class="flex gap-1"
          >
            <button
              class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 border border-slate-600 bg-transparent hover:bg-slate-800 text-slate-200 h-8 px-3 text-xs"
            >
              Editar
            </button>
            <button
              class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-red-600 text-white hover:bg-red-700 h-8 px-3 text-xs"
            >
              Excluir
            </button>
          </div>
          <span
            class="w-2 h-2 rounded-full bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.6)]"
          />
        </div>
        <div
          class="flex gap-4 items-start mb-4"
        >
          <div>
            <h3
              class="text-xl font-bold text-white leading-tight"
            >
              Urban Shadows
            </h3>
            <p
              class="text-xs text-slate-500 mt-1"
            >
              Detective Smith
            </p>
          </div>
        </div>
        <p
          class="text-slate-400 text-sm mb-4 line-clamp-3 flex-1"
        >
          Contemporary
        </p>
        <div
          class="mt-auto pt-4 border-t border-slate-800 flex justify-between items-center text-sm text-slate-500"
        >
          <span
            class="truncate max-w-[60%]"
          >
            Dark
          </span>
          <span
            class="text-purple-400 group-hover:translate-x-1 transition-transform"
          >
            Jogar
             →
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Component Snapshots should match snapshot with empty campaigns 1`] = `
<div
  class="min-h-screen bg-slate-950 p-4 md:p-8"
>
  <div
    class="max-w-6xl mx-auto space-y-8"
  >
    <header
      class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
    >
      <div>
        <h1
          class="text-3xl font-bold text-white"
        >
          Minhas Mesas
        </h1>
        <p
          class="text-slate-400"
        >
          Gerencie suas campanhas de RPG.
        </p>
      </div>
      <div
        class="flex w-full flex-col gap-2 sm:w-auto sm:flex-row"
      >
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-purple-600 text-white hover:bg-purple-700 shadow-sm h-10 px-4 py-2 w-full sm:w-auto"
        >
          + Nova Mesa
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 border border-slate-600 bg-transparent hover:bg-slate-800 text-slate-200 h-10 px-4 py-2 w-full sm:w-auto"
        >
          Sair
        </button>
      </div>
    </header>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
    >
      <div
        class="col-span-full py-20 text-center border-2 border-dashed border-slate-800 rounded-xl"
      >
        <p
          class="text-slate-500 text-lg mb-4"
        >
          Nenhuma campanha encontrada.
        </p>
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-slate-800 text-slate-100 hover:bg-slate-700 border border-slate-700 h-10 px-4 py-2"
        >
          Criar Primeira Aventura
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Component Snapshots should match snapshot with multiple campaigns 1`] = `
<div
  class="min-h-screen bg-slate-950 p-4 md:p-8"
>
  <div
    class="max-w-6xl mx-auto space-y-8"
  >
    <header
      class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
    >
      <div>
        <h1
          class="text-3xl font-bold text-white"
        >
          Minhas Mesas
        </h1>
        <p
          class="text-slate-400"
        >
          Gerencie suas campanhas de RPG.
        </p>
      </div>
      <div
        class="flex w-full flex-col gap-2 sm:w-auto sm:flex-row"
      >
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-purple-600 text-white hover:bg-purple-700 shadow-sm h-10 px-4 py-2 w-full sm:w-auto"
        >
          + Nova Mesa
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 border border-slate-600 bg-transparent hover:bg-slate-800 text-slate-200 h-10 px-4 py-2 w-full sm:w-auto"
        >
          Sair
        </button>
      </div>
    </header>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
    >
      <div
        class="border rounded-xl p-6 transition-colors cursor-pointer flex flex-col h-full relative overflow-hidden bg-slate-900 border-slate-800 hover:border-purple-500"
      >
        <div
          class="flex justify-between items-start mb-2 mt-1"
        >
          <span
            class="text-xs font-mono uppercase text-purple-400 bg-purple-950 px-2 py-1 rounded"
          >
            Fantasy
          </span>
          <span
            class="w-2 h-2 rounded-full bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.6)]"
          />
        </div>
        <div
          class="flex gap-4 items-start mb-4"
        >
          <div>
            <h3
              class="text-xl font-bold text-white leading-tight"
            >
              The Lost Kingdom
            </h3>
            <p
              class="text-xs text-slate-500 mt-1"
            >
              Aragorn
            </p>
          </div>
        </div>
        <p
          class="text-slate-400 text-sm mb-4 line-clamp-3 flex-1"
        >
          Ancient history
        </p>
        <div
          class="mt-auto pt-4 border-t border-slate-800 flex justify-between items-center text-sm text-slate-500"
        >
          <span
            class="truncate max-w-[60%]"
          >
            Epic
          </span>
          <span
            class="text-purple-400 group-hover:translate-x-1 transition-transform"
          >
            Jogar
             →
          </span>
        </div>
      </div>
      <div
        class="border rounded-xl p-6 transition-colors cursor-pointer flex flex-col h-full relative overflow-hidden bg-slate-900 border-slate-800 hover:border-purple-500"
      >
        <div
          class="flex justify-between items-start mb-2 mt-1"
        >
          <span
            class="text-xs font-mono uppercase text-purple-400 bg-purple-950 px-2 py-1 rounded"
          >
            Cyberpunk
          </span>
          <span
            class="w-2 h-2 rounded-full bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.6)]"
          />
        </div>
        <div
          class="flex gap-4 items-start mb-4"
        >
          <div>
            <h3
              class="text-xl font-bold text-white leading-tight"
            >
              Urban Shadows
            </h3>
            <p
              class="text-xs text-slate-500 mt-1"
            >
              Detective Smith
            </p>
          </div>
        </div>
        <p
          class="text-slate-400 text-sm mb-4 line-clamp-3 flex-1"
        >
          Contemporary
        </p>
        <div
          class="mt-auto pt-4 border-t border-slate-800 flex justify-between items-center text-sm text-slate-500"
        >
          <span
            class="truncate max-w-[60%]"
          >
            Dark
          </span>
          <span
            class="text-purple-400 group-hover:translate-x-1 transition-transform"
          >
            Jogar
             →
          </span>
        </div>
      </div>
      <div
        class="border rounded-xl p-6 transition-colors cursor-pointer flex flex-col h-full relative overflow-hidden bg-slate-900/50 border-slate-800 opacity-75 grayscale-[0.5] hover:opacity-100 hover:grayscale-0"
      >
        <div
          class="absolute top-0 right-0 bg-slate-800 text-slate-400 text-[10px] px-2 py-1 rounded-bl"
        >
          ARQUIVADA
        </div>
        <div
          class="flex justify-between items-start mb-2 mt-1"
        >
          <span
            class="text-xs font-mono uppercase text-purple-400 bg-purple-950 px-2 py-1 rounded"
          >
            Fantasy
          </span>
        </div>
        <div
          class="flex gap-4 items-start mb-4"
        >
          <div>
            <h3
              class="text-xl font-bold text-white leading-tight"
            >
              Ancient Quest
            </h3>
            <p
              class="text-xs text-slate-500 mt-1"
            >
              Wizard
            </p>
          </div>
        </div>
        <p
          class="text-slate-400 text-sm mb-4 line-clamp-3 flex-1"
        >
          Lost civilizations
        </p>
        <div
          class="mt-auto pt-4 border-t border-slate-800 flex justify-between items-center text-sm text-slate-500"
        >
          <span
            class="truncate max-w-[60%]"
          >
            Adventure
          </span>
          <span
            class="text-purple-400 group-hover:translate-x-1 transition-transform"
          >
            Ler Histórico
             →
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Component Snapshots should match snapshot with only archived campaigns 1`] = `
<div
  class="min-h-screen bg-slate-950 p-4 md:p-8"
>
  <div
    class="max-w-6xl mx-auto space-y-8"
  >
    <header
      class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
    >
      <div>
        <h1
          class="text-3xl font-bold text-white"
        >
          Minhas Mesas
        </h1>
        <p
          class="text-slate-400"
        >
          Gerencie suas campanhas de RPG.
        </p>
      </div>
      <div
        class="flex w-full flex-col gap-2 sm:w-auto sm:flex-row"
      >
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-purple-600 text-white hover:bg-purple-700 shadow-sm h-10 px-4 py-2 w-full sm:w-auto"
        >
          + Nova Mesa
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 border border-slate-600 bg-transparent hover:bg-slate-800 text-slate-200 h-10 px-4 py-2 w-full sm:w-auto"
        >
          Sair
        </button>
      </div>
    </header>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
    >
      <div
        class="border rounded-xl p-6 transition-colors cursor-pointer flex flex-col h-full relative overflow-hidden bg-slate-900/50 border-slate-800 opacity-75 grayscale-[0.5] hover:opacity-100 hover:grayscale-0"
      >
        <div
          class="absolute top-0 right-0 bg-slate-800 text-slate-400 text-[10px] px-2 py-1 rounded-bl"
        >
          ARQUIVADA
        </div>
        <div
          class="flex justify-between items-start mb-2 mt-1"
        >
          <span
            class="text-xs font-mono uppercase text-purple-400 bg-purple-950 px-2 py-1 rounded"
          >
            Fantasy
          </span>
        </div>
        <div
          class="flex gap-4 items-start mb-4"
        >
          <div>
            <h3
              class="text-xl font-bold text-white leading-tight"
            >
              Ancient Quest
            </h3>
            <p
              class="text-xs text-slate-500 mt-1"
            >
              Wizard
            </p>
          </div>
        </div>
        <p
          class="text-slate-400 text-sm mb-4 line-clamp-3 flex-1"
        >
          Lost civilizations
        </p>
        <div
          class="mt-auto pt-4 border-t border-slate-800 flex justify-between items-center text-sm text-slate-500"
        >
          <span
            class="truncate max-w-[60%]"
          >
            Adventure
          </span>
          <span
            class="text-purple-400 group-hover:translate-x-1 transition-transform"
          >
            Ler Histórico
             →
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Component Snapshots should match snapshot with single active campaign 1`] = `
<div
  class="min-h-screen bg-slate-950 p-4 md:p-8"
>
  <div
    class="max-w-6xl mx-auto space-y-8"
  >
    <header
      class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
    >
      <div>
        <h1
          class="text-3xl font-bold text-white"
        >
          Minhas Mesas
        </h1>
        <p
          class="text-slate-400"
        >
          Gerencie suas campanhas de RPG.
        </p>
      </div>
      <div
        class="flex w-full flex-col gap-2 sm:w-auto sm:flex-row"
      >
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 bg-purple-600 text-white hover:bg-purple-700 shadow-sm h-10 px-4 py-2 w-full sm:w-auto"
        >
          + Nova Mesa
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-purple-500 disabled:pointer-events-none disabled:opacity-50 border border-slate-600 bg-transparent hover:bg-slate-800 text-slate-200 h-10 px-4 py-2 w-full sm:w-auto"
        >
          Sair
        </button>
      </div>
    </header>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
    >
      <div
        class="border rounded-xl p-6 transition-colors cursor-pointer flex flex-col h-full relative overflow-hidden bg-slate-900 border-slate-800 hover:border-purple-500"
      >
        <div
          class="flex justify-between items-start mb-2 mt-1"
        >
          <span
            class="text-xs font-mono uppercase text-purple-400 bg-purple-950 px-2 py-1 rounded"
          >
            Fantasy
          </span>
          <span
            class="w-2 h-2 rounded-full bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.6)]"
          />
        </div>
        <div
          class="flex gap-4 items-start mb-4"
        >
          <div>
            <h3
              class="text-xl font-bold text-white leading-tight"
            >
              The Lost Kingdom
            </h3>
            <p
              class="text-xs text-slate-500 mt-1"
            >
              Aragorn
            </p>
          </div>
        </div>
        <p
          class="text-slate-400 text-sm mb-4 line-clamp-3 flex-1"
        >
          Ancient history
        </p>
        <div
          class="mt-auto pt-4 border-t border-slate-800 flex justify-between items-center text-sm text-slate-500"
        >
          <span
            class="truncate max-w-[60%]"
          >
            Epic
          </span>
          <span
            class="text-purple-400 group-hover:translate-x-1 transition-transform"
          >
            Jogar
             →
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
